--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -290,8 +290,8 @@ later.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
-This differs from the actual system presently used, which includes restrictions
-such as a proxy can only serve ten voters~\cite{CERP2020}.
+This differs from the actual system presently used by the House of Representatives,
+which includes restrictions such as a proxy can only serve ten voters~\cite{CERP2020}.
 However, we feel removing restrictions such as these leads to a more interesting
 discussion, since it allows the use of different voting mechanisms and more extreme
 cases.
@@ -388,23 +388,28 @@ on a continuous preference space.
 
 \section{Proposed Work}\label{sec:contribution}
 % \section{Contribution}\label{sec:contribution}
-This study aims to explore the use of proxy voting in the House of Representatives.
+This study aims to explore the impact the use of proxies has on a vote,
+particularly in the House of Representatives, where high accuracy and participation
+is required.
 We examine how much of an effect in terms of error proxy voting has on the outcome
 of a vote under a number of distributions of opinions, as well as with various
 numbers of delegators.
-The error of a proxy vote will be calculated by measuring how much the system output
-changes when using proxy voting instead of having all members voting and only present
-members voting.
-This will be done using continuous outputs instead of discrete or binary `yea' or
-`nay' votes, since this will allow for more precise measurements in differences
-between proxy and non-proxy voting.
+We additionally employ a continuous space preference model to represent agents
+preferences, and introduce the ability allow agents to express their preferences as
+any number within the range of this model.
+The error of a proxy vote will be calculated by measuring the distance in this space
+between the proxy vote outcome, the non-proxy vote outcome, as well as comparing what
+would happen if only the active agents, meaning the agents who would not use a
+proxy, voted.
+Employing this model will allow for a more granular measurement of error, as well as
+allow the agents to be more expressive with their preferences.
 
-This paper additionally experiments with using different voting mechanisms in order
-to determine if these proxy votes should be handled differently from normal voting,
-as well as observe at what ratios between delegates and delegators such mechanisms
-are effective.
-Finally, this paper will watch for the prevalence of super voters and attempt to
-assess any effect, beneficial or harmful, they have on the system.
+We additionally experiment with several voting mechanisms in order to determine if
+proxy votes should be handled differently from normal voting, as well as observe at
+what ratios between delegates and delegators such mechanisms are effective.
+This paper hopes to identify the best voting mechanism for proxy voting, as well as
+determine if proxy voting is a viable technique to increase system welfare without
+having too large an impact on the outcomes of a vote.
 
 % TODO: Fill out synopsis of what is learned after the data is analysed
 % This paper will show that, while proxy vote systems are not a perfect tool to
@@ -413,17 +418,3 @@ assess any effect, beneficial or harmful, they have on the system.
 % Additionally, this paper will identify the best performing voting and weighting
 % mechanisms, as well as discuss an ideal range of proxy and inactive agents to be used
 % in such a system.
-
-% TODO: Maybe combine this section with "Contribution," explaining how we hope to be
-%   able to apply what's learned here to actual scenarios?
-% \section{Potential Applications}\label{sec:potential-applications}
-% Proxy vote systems can be used in situations where highly accurate measurements are
-% difficult, costly, or time-consuming, and cheaper or easier alternatives are
-% available.
-% While this study will show they will not work in all situations, they do have a
-% potential use when one of the alternative measurements tends to yield an asymmetrical
-% distribution of error.
-%
-% These systems may also have use in ensemble machine learning techniques, though this
-% idea is not explored in this study.
-
