--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -167,7 +167,7 @@ mechanisms minimize this error, is precisely what this paper will explore.
 
 
 \section{Preliminary Setup and Assumptions}\label{sec:setup-and-assumptions}
-An important part of any study is the model is uses to represent the system being
+An important part of any study is the model it uses to represent the system being
 studied.
 In this work, we employ a model developed by \etal{Cohensius} in their 2017
 article~\cite{Cohensius2017}.
