Added paragraph about multiple proxy delegations

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -251,6 +251,18 @@ the model, since observing the continuous output allows for more granularity in 
 differences between proxy and non-proxy voting, as well as in the differences between
 voting rules.
 
+Additionally, under normal proxy voting each voter can only delegate a single proxy.
+This provides a simple system where a voter can simply select a single individual and
+allow them to vote on their behalf.
+This has the downside, however, that the proxy might not have as close of an opinion
+to the voter as they would like.
+This raises the question, what if we allowed a voter to delegate multiple proxies?
+They could, for example, delegate their vote to a trusted group, who would then
+aggregate their opinions into some preference in the aforementioned model on behalf of
+the delegator.
+This may reduce the error introduced by using proxies and allow the agent to feel
+more secure that their voting power will be used as they desire.
+
 \subsection{Assumptions}\label{subsec:assumptions}
 In order to conduct this study, we make a number of assumptions.
 First, we assume that each voter is able to choose their proxy, also known as a
