--- a/references/research.bib
+++ b/references/research.bib
@@ -205,6 +205,33 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   year       = {2017},
 }
 
+@Misc{Degrave2014,
+  author    = {Degrave, Jonas},
+  title     = {Resolving multi-proxy transitive vote delegation},
+  doi       = {10.48550/ARXIV.1412.4039},
+  url       = {https://arxiv.org/abs/1412.4039},
+  copyright = {Creative Commons Attribution 3.0 Unported},
+  keywords  = {Multiagent Systems (cs.MA), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+  year      = {2014},
+}
+
+@inproceedings{Colley2021,
+author = {Colley, Rachael},
+title = {Multi-Agent Ranked Delegations in Voting},
+year = {2021},
+isbn = {9781450383073},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+abstract = {We generalise liquid democracy, a voting model where an agent can either vote on an issue or delegate to another agent who votes on their behalf. As delegations are transitive, delegates can choose to vote directly or to delegate their votes further. Transitivity can cause delegation cycles, making it unclear how to determine these votes. Our generalisation allows for ranked delegations in order to break delegation cycles. Agents can also give more expressive delegations than in liquid democracy, being able to state how their vote should be determined from the votes of others. For example, an agent may want their vote to correspond to the majority opinion of a group of trusted experts. We focus on how to gain a collective decision in this setting; we propose six unravelling procedures that find a standard voting profile, from the complex ballots, that can be aggregated. We study the properties of these unravelling procedures, including the complexity of finding an outcome, as well as axiomatic properties of the procedures. Following this, we lay out some future research directions.},
+booktitle = {Proceedings of the 20th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {1802–1804},
+numpages = {3},
+keywords = {reasoning in agent-based systems, social networks, social choice theory},
+location = {Virtual Event, United Kingdom},
+series = {AAMAS '21}
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
