--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -398,7 +398,23 @@ mechanisms used under proxy voting instead of single-winner elections, and most 
 our mechanisms will be different due to some incapability of the mechanisms the used
 on a continuous preference space.
 
-% TODO: Find more papers talking about proxy voting error
+We also look at how allowing a voter to delegate multiple proxies affects the vote,
+as described towards the end of \autoref{sec:setup-and-assumptions}.
+Jonas Degrave~\cite{Degrave2014} implements a simple model to allow voters to
+delegate to multiple proxies, specifically by simply dividing their weight amongst
+all those to which the voter delegates.
+This is precisely the model we will use, since it allows for a straightforward way to
+delegate voting power that would not be confusing to voters.
+However, we additionally look at how many proxies a voter should be allowed to
+delegate.
+Intuitively, if a voter were to delegate all other voters as proxies the result would
+be the same as if the voter had simply not voted.
+However, if the voter were to only delegate a single proxy, the result might not be
+as ideal to the delegator as if they had been able to delegate to two proxies that
+would produce a better result for the delegator.
+As such, we ask, if voters can delegate more than one proxy, how many proxies should
+they be allowed to delegate?
+
 % TODO: Outline methods for performing analysis and test design
 
 
@@ -426,6 +442,11 @@ what ratios between delegates and delegators such mechanisms are effective.
 This paper hopes to identify the best voting mechanism for proxy voting, as well as
 determine if proxy voting is a viable technique to increase system welfare without
 having too large an impact on the outcomes of a vote.
+
+Finally, we explore how many proxies any given voter should be allowed to delegate.
+The purpose of this exploration is to determine if delegating multiple proxies can
+help produce a more accurate result by providing more information to the system, and
+at what point this effect begins to decrease or hurt the system.
 
 % TODO: Fill out synopsis of what is learned after the data is analysed
 % This paper will show that, while proxy vote systems are not a perfect tool to
