--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -314,22 +314,21 @@ cases.
 
 
 \section{Previous Work}\label{sec:previous-work}
-\vicki{
-    This isn't previous work.
-    Previous work is more like: Researcher B looked at proxy voting in two space
-    using manhattan distance between proxy and inactive voter.
-    Using the methods of X,Y, and Z, they discovered that proxy voting had an error
-    of Q when used on population T. However, they did not consider W (which we intend
-    to explore).
-    In other words, your previous work needs to give the best alternative to what you
-    are doing.
-    You will also compare yourself to the alternative.
-    We need to know what others have done in order to (1) know if you've done
-    anything useful (2) understand your credentials in doing this work.
-    Previous work will also describe standard methods of doing analysis, so we can
-    see the motivation for the way you designed the tests.
-}
-
+% \vicki{
+%     This isn't previous work.
+%     Previous work is more like: Researcher B looked at proxy voting in two space
+%     using manhattan distance between proxy and inactive voter.
+%     Using the methods of X,Y, and Z, they discovered that proxy voting had an error
+%     of Q when used on population T. However, they did not consider W (which we intend
+%     to explore).
+%     In other words, your previous work needs to give the best alternative to what you
+%     are doing.
+%     You will also compare yourself to the alternative.
+%     We need to know what others have done in order to (1) know if you've done
+%     anything useful (2) understand your credentials in doing this work.
+%     Previous work will also describe standard methods of doing analysis, so we can
+%     see the motivation for the way you designed the tests.
+% }
 % FIXME: This might need to be moved to Background. It feels somewhere in between
 %   both Previous Work and Background.
 James Miller~\cite{Miller1969} imagined a governmental system utilizing proxy voting
