--- a/abstract.tex
+++ b/abstract.tex
@@ -14,13 +14,11 @@
     using a voting rule or mechanism.
     Ideally, the result of proxy voting would be the same, or as close to as
     possible, to the result if everyone were to vote.
-    This resolution was almost immediately put into practice and remains active at
-    the time of this study.
     The type of proxy voting used in Congress differs from the traditional
     definition of proxy voting in that proxies are required to vote as directed, and
     was designed to reduce the transmission of disease such as COVID-19.
-    If proxy voting can be shown to be beneficial, the resolution could be expanded to
-    create a more efficient government system.
+    If traditional proxy voting can be shown to be beneficial, the resolution could be
+    adapted and expanded to create a more efficient government system.
     However, proxy voting in Congress has been regarded with some skepticism and the
     question remains as to if proxy voting has too great of an effect on the result
     of the vote.
@@ -34,9 +32,8 @@
     the model space, instead of the vote simply passing or failing, in order to
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
-    Finally, we attempt to determine under which circumstances, if any, proxy voting
-    should be used and identify strengths and weaknesses of using proxy voting in the
-    modern House of Representatives.
+    Finally, we attempt to determine how many proxies a voter should be allowed
+    to delegate in order to increase the accuracy of the system.
     % TODO: Put in a bit of what we discover
 
 
