Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -142,7 +142,7 @@ As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
 $\truthof{\agent_2} = 0.25$, $\truthof{\agent_3} = 0.5$, $\truthof{\agent_4} = 1$,
 $\truthof{\agent_5} = 0.15$.
-Further details on such a preference space model and its mechanics is described in
+Further details on such a preference space model and its mechanics are described in
 \autoref{sec:setup-and-assumptions}.
 Under the mean mechanism, which aggregates opinions by simply taking their mean, if
 everyone were to vote we would get the actual preference of the
